--- a/NetworkDiscoveryGUI/MainWindow.xaml
+++ b/NetworkDiscoveryGUI/MainWindow.xaml
@@ -1,27 +1,28 @@
-﻿<Window x:Class="NetworkDiscoveryGUI.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:extToolkit="http://schemas.microsoft.com/winfx/2006/xaml/presentation/toolkit/extended"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="Nulodgic Discovery Tool"  ResizeMode="NoResize" Height="600" Width="1000"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:WPFTool="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="NetworkDiscoveryGUI.MainWindow"
+        Title="Nulodgic Discovery Tool"  ResizeMode="NoResize" Height="600" Width="1000"
          TextElement.Foreground="{DynamicResource MaterialDesignBody}"
          TextElement.FontWeight="Regular"
          TextElement.FontSize="13"
          TextOptions.TextFormattingMode="Ideal"
          TextOptions.TextRenderingMode="Auto"
          Background="{DynamicResource MaterialDesignPaper}">
-    <WPFTool:BusyIndicator Name="BusyIndicator">
+    <WPFTool:BusyIndicator x:Name="BusyIndicator">
         <Grid>
-            <Grid x:Name="regularContent" >
+            <Grid x:Name="regularContent" RenderTransformOrigin="0.503,0.958" >
                 <Grid.Background>
                     <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                         <GradientStop Color="Black" Offset="0"/>
                         <GradientStop Color="#FFC7B7F1" Offset="1"/>
                     </LinearGradientBrush>
                 </Grid.Background>
-                <Button Content="Start" Name="start_discovery" HorizontalAlignment="Left" Click="Start_Discovery" Margin="31,45,0,0" VerticalAlignment="Top" Width="117" Height="36" FontWeight="Normal" Opacity="0.8" BorderBrush="#FFE8E8E8">
+                <Button Content="Start" x:Name="start_discovery" HorizontalAlignment="Left" Click="Start_Discovery" Margin="31,45,0,0" VerticalAlignment="Top" Width="117" Height="36" FontWeight="Normal" Opacity="0.8" BorderBrush="#FFE8E8E8">
                     <Button.Background>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                             <GradientStop Color="Black" Offset="0"/>
@@ -29,7 +30,7 @@
                         </LinearGradientBrush>
                     </Button.Background>
                 </Button>
-                <Button Content="Push" HorizontalAlignment="Left" Margin="184,45,0,0" Click="Push_Data" VerticalAlignment="Top" Width="117" Height="36" FontWeight="Normal" Opacity="0.8" BorderBrush="#FFEBEAEE">
+                <Button Content="Push" x:Name="push_discovery" HorizontalAlignment="Left" Margin="184,45,0,0" Click="Push_Data" VerticalAlignment="Top" Width="117" Height="36" FontWeight="Normal" Opacity="0.8" BorderBrush="#FFEBEAEE">
                     <Button.Background>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                             <GradientStop Color="Black" Offset="0"/>
@@ -37,7 +38,7 @@
                         </LinearGradientBrush>
                     </Button.Background>
                 </Button>
-                <DataGrid Name="discovered" IsReadOnly="True" AutoGenerateColumns="False" Margin="31,110,37,38" BorderBrush="#895A5ACF" Foreground="#DD000000" Background="#FFCCCCD6" >
+                <DataGrid x:Name="discovered" IsReadOnly="True" AutoGenerateColumns="False" Margin="31,139,37,48.5" BorderBrush="#895A5ACF" Foreground="#DD000000" Background="#FFCCCCD6" >
                     <DataGrid.Resources>
                         <Style TargetType="{x:Type DataGridColumnHeader}">
                             <Setter Property="ContentTemplate">
@@ -62,9 +63,23 @@
                           Binding="{Binding manf}" Width="2*" />
                     </DataGrid.Columns>
                 </DataGrid>
-                <TextBlock x:Name="count" HorizontalAlignment="Right" Margin="0,74,37,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="31" Width="147" Foreground="#DDFFFFFF"
+                <TextBlock x:Name="count" HorizontalAlignment="Right" Margin="0,103,37,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="31" Width="147" Foreground="#DDFFFFFF"
                             FontSize="16" FontFamily="Forte" RenderTransformOrigin="0.475,1.756"/>
+                <TextBox x:Name="range" HorizontalAlignment="Right" Margin="0,90,399,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="30" Width="270" Foreground="#DDFFFFFF"
+                            FontSize="16" FontFamily="Forte" RenderTransformOrigin="0.475,1.756"/>
+                <TextBlock Text="Enter IP Range(Valid: 192.168.10.1-254)"  HorizontalAlignment="Right" Margin="0,103,669,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="31" Width="289" Foreground="#DDFFFFFF"
+                	FontSize="16" FontFamily="Forte" RenderTransformOrigin="0.475,1.756"/>
+               <!-- <ProgressBar Name="progressBar1" Height="27" Margin="422,28,37,0" VerticalAlignment="Top"/>-->
+                
             </Grid>
+            <StatusBar Name="SBar" Grid.Column="0" Grid.Row="5" VerticalAlignment="Bottom" Background="LightBlue"  >
+                <StatusBarItem Background="#FF8084DC" Height="33.96">
+                    <TextBlock>Status:</TextBlock>
+                </StatusBarItem>
+                <StatusBarItem Background="#FF8084DC" Height="33.96">
+                    <TextBlock x:Name="Percent">0%</TextBlock>
+                </StatusBarItem>
+            </StatusBar>
         </Grid>
     </WPFTool:BusyIndicator>
 </Window>
